--- a/src/styles/mixins.styl
+++ b/src/styles/mixins.styl
@@ -19,3 +19,17 @@ hoverDesktop()
   &:hover
     html.desktop &
       {block}
+
+grid-column($colsCount, $gutter, $size)
+  $gutter = $gutter * 1px
+  $gutters = ($colsCount - 1) * $gutter
+  $innerGutters = ($size - 1) * $gutter
+
+  return 'calc((((100% - %s) / %s) * %s) + %s)' % ($gutters $colsCount $size $innerGutters)
+
+grid-offset($colsCount, $gutter, $size)
+  $gutter = $gutter * 1px
+  $gutters = ($colsCount - 1) * $gutter
+  $guttersOffset = ($size) * $gutter
+
+  return 'calc((((100% - %s) / %s) * %s) + %s)' % ($gutters $colsCount $size $guttersOffset)
