--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -4,4 +4,5 @@ $revealTiming = cubic-bezier(0.260, 0.860, 0.440, 0.985)
 $uberTiming = cubic-bezier(0.8, 0, 0.2, 1)
 $fastInSlowOut = cubic-bezier(0.075, 0.82, 0.165, 1)
 $tFast = 350ms
-$transitionDefault = opacity, transform $tFast $googleTiming
+$tDurationDeafault = $tFast
+$tTimingFunctionDefault = $uberTiming
