--- a/src/styles/common.styl
+++ b/src/styles/common.styl
@@ -33,3 +33,12 @@ body
 // ::selection
 //   background-color rgba(black, .17)
 //   color black
+
+.js-soa
+  will-change transform, opacity
+  transition()
+  transition-duration 500ms
+  transition-delay 50ms
+
+  &.is-scroll-invisible
+    opacity 0
