--- a/src/styles/common.styl
+++ b/src/styles/common.styl
@@ -34,6 +34,7 @@ body
 //   background-color rgba(black, .17)
 //   color black
 
+// ScrollObserver animation class
 .js-soa
   will-change transform, opacity
   transition()
